Import of FPIVARI/SquareMaker-4.1 from CPAN.
gitpan-cpan-distribution: SquareMaker
gitpan-cpan-version:      4.1
gitpan-cpan-path:         FPIVARI/SquareMaker-4.1.tar.gz
gitpan-cpan-author:       FPIVARI
gitpan-cpan-maturity:     released

--- a/examples.html
+++ b/examples.html
@@ -9,35 +9,35 @@
 <H1>Nice examples</H1>
 Here there are some nice examples made with Simple Magic Square checker and gif
 maker 2.0.<P>
-<LI><A HREF="./Examples/templar.gif">The Templar Magic Square</A>
+<LI><A HREF="Examples/templar.gif">The Templar Magic Square</A>
 (<A HREF="http://www.trantex.fi/staff/heikkih/knights/pubsator.htm">Here</A>
 you can find more information)</LI>
 <LI>Alphamagic Square: A Magic Square for which the number of letters in the
 word for each number generates another Magic Square. This definition depends, of
 course, on the language being used. In English, for example,
-<A HREF="./Examples/alphamagicsquare.gif">Alphamagic Square</A>
-<A HREF="./Examples/alphamagicsquare_gen.gif">Magic Square generated</A></LI>
+<A HREF="Examples/alphamagicsquare.gif">Alphamagic Square</A>
+<A HREF="Examples/alphamagicsquare_gen.gif">Magic Square generated</A></LI>
 <LI>Border Square: a Magic Square that remains magic when its border is removed.
-<A HREF="./Examples/bordersquare7x7.gif">Border Square 7x7</A>
-<A HREF="./Examples/bordersquare5x5.gif">Magic Square generated 5x5</A>
-<A HREF="./Examples/bordersquare3x3.gif">Magic Square generated 3x3</A></LI>
+<A HREF="Examples/bordersquare7x7.gif">Border Square 7x7</A>
+<A HREF="Examples/bordersquare5x5.gif">Magic Square generated 5x5</A>
+<A HREF="Examples/bordersquare3x3.gif">Magic Square generated 3x3</A></LI>
 <LI>Panmagic Square: If all diagonals (diagonals an broken diagonals) of a Magic
 Square sum to the Magic Constant, the square is said to be a Panmagic Square
 (also called Diabolical Square, Nasik Square, or Pandiagonal Square)
-<A HREF="./Examples/panmagicsquare.gif">Panmagic Square</A></LI>
+<A HREF="Examples/panmagicsquare.gif">Panmagic Square</A></LI>
 <LI>Bimagic Square: If replacing each number by its square in a Magic Square
 produces another Magic Square, the square is said to be a bimagic square.
-<A HREF="./Examples/bimagicsquare.gif">Bimagic Square</A></LI><P>
-<LI><IMG SRC="./new.gif" WIDTH=28 HEIGHT=11>Magic Line: In a normal Magic Square (1,2,...N), Magic Line is the
+<A HREF="Examples/bimagicsquare.gif">Bimagic Square</A></LI><P>
+<LI><IMG SRC="new.gif" WIDTH=28 HEIGHT=11>Magic Line: In a normal Magic Square (1,2,...N), Magic Line is the
 line that it is obtained connectig every number from 1 to N.
-<A HREF="./Examples/magicsquare.gif">Magic Square</A> and its
-<A HREF="./Examples/magicline.gif">Magic Line</A></LI><P>
-<LI><IMG SRC="./new.gif" WIDTH=28 HEIGHT=11>Magic Cube:
-<A HREF="./Examples/cube1.gif">Magic Cube first section</A>
-<A HREF="./Examples/cube2.gif">Magic Cube second section</A>
-<A HREF="./Examples/cube3.gif">Magic Cube third section</A>
-<A HREF="./Examples/cube4.gif">Magic Cube fourth section</A>
-<A HREF="./Examples/cube5.gif">Magic Cube fifth section</A>
+<A HREF="Examples/magicsquare.gif">Magic Square</A> and its
+<A HREF="Examples/magicline.gif">Magic Line</A></LI><P>
+<LI><IMG SRC="new.gif" WIDTH=28 HEIGHT=11>Magic Cube:
+<A HREF="Examples/cube1.gif">Magic Cube first section</A>
+<A HREF="Examples/cube2.gif">Magic Cube second section</A>
+<A HREF="Examples/cube3.gif">Magic Cube third section</A>
+<A HREF="Examples/cube4.gif">Magic Cube fourth section</A>
+<A HREF="Examples/cube5.gif">Magic Cube fifth section</A>
 </LI><P>
 <B>References</B><P>
 <A HREF="http://www.gps.caltech.edu/~eww/math/">Eric's Treasure Trove of
