Import of FPIVARI/SquareMaker-4.2 from CPAN.
gitpan-cpan-distribution: SquareMaker
gitpan-cpan-version:      4.2
gitpan-cpan-path:         FPIVARI/SquareMaker-4.2.tar.gz
gitpan-cpan-author:       FPIVARI
gitpan-cpan-maturity:     released

--- a/examples.html
+++ b/examples.html
@@ -1,14 +1,16 @@
 <!-- Simple Magic Square checker and gif maker designed by Fabrizio Pivari
-(Pivari@geocities.com) on 04/25/97 -->
+(Pivari@geocities.com) on 06/19/97 -->
 
 <HTML>
 <HEAD>
+<META Name="Author" Content="Fabrizio Pivari">
 <TITLE>Examples</TITLE>
 </HEAD>
 <BODY>
 <H1>Nice examples</H1>
 Here there are some nice examples made with Simple Magic Square checker and gif
-maker 2.0.<P>
+maker 4.2.<P>
+<UL>
 <LI><A HREF="Examples/templar.gif">The Templar Magic Square</A>
 (<A HREF="http://www.trantex.fi/staff/heikkih/knights/pubsator.htm">Here</A>
 you can find more information)</LI>
@@ -27,21 +29,67 @@ Square sum to the Magic Constant, the square is said to be a Panmagic Square
 <A HREF="Examples/panmagicsquare.gif">Panmagic Square</A></LI>
 <LI>Bimagic Square: If replacing each number by its square in a Magic Square
 produces another Magic Square, the square is said to be a bimagic square.
-<A HREF="Examples/bimagicsquare.gif">Bimagic Square</A></LI><P>
-<LI><IMG SRC="new.gif" WIDTH=28 HEIGHT=11>Magic Line: In a normal Magic Square (1,2,...N), Magic Line is the
+<A HREF="Examples/bimagicsquare.gif">Bimagic Square</A></LI>
+<LI><IMG SRC="new.gif">Magic Line: In a normal Magic Square (1,2,...N), Magic Line is the
 line that it is obtained connectig every number from 1 to N.
 <A HREF="Examples/magicsquare.gif">Magic Square</A> and its
-<A HREF="Examples/magicline.gif">Magic Line</A></LI><P>
-<LI><IMG SRC="new.gif" WIDTH=28 HEIGHT=11>Magic Cube:
+<A HREF="Examples/magicline.gif">Magic Line</A></LI>
+<LI><IMG SRC="new.gif">Magic Cube:
 <A HREF="Examples/cube1.gif">Magic Cube first section</A>
 <A HREF="Examples/cube2.gif">Magic Cube second section</A>
 <A HREF="Examples/cube3.gif">Magic Cube third section</A>
 <A HREF="Examples/cube4.gif">Magic Cube fourth section</A>
 <A HREF="Examples/cube5.gif">Magic Cube fifth section</A>
-</LI><P>
+</LI>
+<LI><IMG SRC="new.gif"><A HREF="Examples/prime.html">Harry Nelson 3x3 magic square,
+ whose nine entries are consecutive primes</A></LI><P>
+<LI><IMG SRC="new.gif">Magic Square and Numerology: these are the seven magic
+squares 
+   <UL>
+   <LI><A HREF="Examples/saturn.gif">Saturn Magic Square</A>: the magic costant is 15
+   and the sum of all the numbers of the square is 45. 15 and 45 are triangular
+   numbers. The colours are: white for the numbers and black for the
+   background. The metal of Saturn is lead</LI>
+   <LI><A HREF="Examples/jupiter.gif">Jupiter Magic Square</A>: the magic costant is 34
+   the product of 2, the first female number (even are female, odd, without 1
+   are male) and 17 a male prime number. The sum of all the numbers of the
+   square 136. 136 is strangely bound to 244.
+   1<SUP>3</SUP>+3<SUP>3</SUP>+6<SUP>3</SUP>=244 and
+   2<SUP>3</SUP>+4<SUP>3</SUP>+4<SUP>3</SUP>=136
+   The colours are: orange-bronze for the numbers and blue for the background.
+   The metal of Jupiter is tin.</LI>
+   <LI><A HREF="Examples/mars.gif">Mars Magic Square</A>: the magic costant is 65, the
+   second number equal to the sum of 2 squares 1 + 8<SUP>2</SUP> and
+   4<SUP>2</SUP> + 7<SUP>2</SUP> and product of 5 and 13, two important numbers.
+   The sum of all the numbers of the square is 325, the smallest number sum of
+   2 squares in three different mode: 1 + 18<SUP>2</SUP>,
+   6<SUP>2</SUP> + 17<SUP>2</SUP>, 10<SUP>2</SUP> + 15<SUP>2</SUP>.
+   The colours are: green for the numbers and red for the background.
+   The metal of Mars is iron</LI>
+   <LI><A HREF="Examples/sun.gif">Sun Magic Square</A>: the magic costant is 111, three
+   one. The sum of all the numbers of the square is 666, the number of the 
+   Beast of th Apocalypse. The colours are: purple or magenta for the
+   numbers and yellow for the background. The metal of the Sun is gold</LI>
+   <LI><A HREF="Examples/venus.gif">Venus Magic Square</A>: the magic costant is 175
+   equal 1 + 7<SUP>2</SUP> + 5<SUP>2</SUP>. The sum of all the numbers of the
+   square is 1225 = 35<SUP>2</SUP> is also triangular.
+   The colours are: lemon yellow for the numbers and dark green for the
+   background. The metal of Venus is bronze.</LI>
+   <LI><A HREF="Examples/mercury.gif">Mercury Magic Square</A>: the magic costant is 260,
+   the sum of all the numbers of the square is 2080. The colours are: clear
+   blue for the numbers and orange-bronze for the background.
+   The metal of Mercury is mercury.</LI>
+   <LI><A HREF="Examples/moon.gif">Moon Magic Square</A>: the magic costant is 369,
+   formed by 3x1, 3x2, 3x3. The sum of all the numbers of the square is 3321.
+   The colours are opposite Sun colours: yellow for numbers and purple or
+   magenta for the background. The metal of Moon is silver.</LI>
+   </UL>
+</UL>
 <B>References</B><P>
 <A HREF="http://www.gps.caltech.edu/~eww/math/">Eric's Treasure Trove of
-Mathematics</A><P>
+Mathematics</A><BR>
+John King, <em>The Modern Numerology - A Pratical Guide to the Meaning
+and Influence of Numbers</em>, Blandford<BR>
 Italo Ghersi, <em>Matematica Dilettevole e Curiosa</em>, Hoepli.
 </BODY>
 </HTML>
