--- a/separator_skip.html
+++ b/separator_skip.html
@@ -17,12 +17,14 @@ for ex.<BR>
  , , return<BR>
  , , return<BR>
 with separator ","<P>
-If you want produce the gif of this magic square
- 1 23 20 14  7<BR>
-15  9  2 21 18<BR>
-22 16 13 10  4<BR>
- 8  5 24 17 11<BR>
-19 12  6  3 25<BR>
+If you want produce the gif of this magic square<BR>
+<PRE>
+ 1 23 20 14  7
+15  9  2 21 18
+22 16 13 10  4
+ 8  5 24 17 11
+19 12  6  3 25
+</PRE>
 You can use the default separator with the option Skip blanks.
 The option Skip blanks deletes every initial line sequence of blanks and
 trasforms the other sequences of blanks in the blank, if the separator is blank
